--- a/index.html
+++ b/index.html
@@ -62,12 +62,71 @@
     </div>
 
     
-
+            <!-- parte medio -->
     <div class="pantallaMedio">
-
+        <div>
+            <h2>Tickets Recientes</h2>
+        </div>
     </div>
 
     <div class="pantallaDerecha">
+        <div>
+            <p class="tituloDerecha">Especialistas</p>
+        </div>
+
+        <!-- especialistas -->
+        <div class="EspecialistasPefil">
+            <section>
+                <img class="iconEspecialistas" src="img/Ronaldo profile photo.jpg" alt="">
+                <p class="nombreEspecialistas">Cristiano Ronaldo</p> <br>
+                <small class="Especialidad">Especialista en redes</small>
+            </section>
+
+            <section style="margin-top: 5%;">
+                <img class="iconEspecialistas2" src="img/elBicho.jpg" alt="">
+                <p class="nombreEspecialistas">El bicho</p> <br>
+                <small class="Especialidad">Especialista en Hardware</small>
+            </section>
+
+            <section style="margin-top: 5%;">
+                <img class="iconEspecialistas3" src="img/redDemon.jpg" alt="">
+                <p class="nombreEspecialistas">Red Demon</p> <br>
+                <small class="Especialidad">Especialista en Aplicaciones</small>
+            </section>
+        </div>
+
+        <!-- tareas -->
+        <p class="tituloDerecha">Tareas</p>
+        <button class="btnAgregarTarea">+ Agregar Tarea</button>
+        <section>
+            <div class="tareas">
+                <h2 class="dias">Lun <br> 03</h2>
+                <div class="boxReunion">
+                    <p class="textoReunion">Copia de seguridad realizadas en <br> pc</p>
+                    <p class="textoHorario">09:00 - 10:30</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="tareas">
+                <h2 class="dias">Lun <br> 03</h2>
+                <div class="boxReunion2">
+                    <p class="textoReunion">Reunion</p>
+                    <p class="textoHorario2">17:00 - 18:30</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="tareas">
+                <h2 class="dias">Mie <br> 03</h2>
+                <div class="boxReunion">
+                    <p class="textoReunion">Reunion</p>
+                    <p class="textoHorario">09:00 - 10:30</p>
+                </div>
+            </div>
+        </section>
 
     </div>
 </body>
