--- a/index.html
+++ b/index.html
@@ -64,11 +64,27 @@
     
             <!-- parte medio -->
     <div class="pantallaMedio">
+        <section>
+            <div>
+                <h1 class="tituloPrincipal">Tickets Recientes</h1>
+                <button class="btnAgregarTicket">+ Asignar nuevo ticket</button>
+                <div class="card">
+                    <img class="iconEspecialistas" src="img/Ronaldo profile photo.jpg" alt="">
+                    <p class="TextoUsua">Usuario 1</p>
+                    <small class="TextoGmail">usuario@gmail.com</small>
+                    <p class="textoLetra textoCard">Tecnico de soporte de pc <br> 13:23</p>
+                    <p class="textoLetra textoError">La PC no enciende despues de una actualizacion del sistema.</p>
+                    <button class="btnAgregarEnable">Enable</button>
+                    <button class="btnAgregarEnable2">Enable</button>
+                </div>
+            </div>
+        </section>
         <div>
-            <h2>Tickets Recientes</h2>
+            <img src="img/grafica.jpg" alt="" style="width: 500px; margin-left: 20%; margin-top: 2%;">
+            <img src="img/grafica3.jpg" alt="" style="width: 400px; margin-left: 3%; margin-top: 2%; position: absolute;">
         </div>
     </div>
-
+        <!-- fin parte medio -->
     <div class="pantallaDerecha">
         <div>
             <p class="tituloDerecha">Especialistas</p>
