--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <h1 class="tituloPrincipal">Tickets Recientes</h1>
                 <button class="btnAgregarTicket">+ Asignar nuevo ticket</button>
                 <div class="card">
-                    <img class="iconEspecialistas" src="img/Ronaldo profile photo.jpg" alt="">
+                    <img class="iconEspecialistas" src="img/ronaldoperfil.jpg" alt="">
                     <p class="TextoUsua">Usuario 1</p>
                     <small class="TextoGmail">usuario@gmail.com</small>
                     <p class="textoLetra textoCard">Tecnico de soporte de pc <br> 13:23</p>
@@ -80,8 +80,8 @@
             </div>
         </section>
         <div>
-            <img src="img/grafica.jpg" alt="" style="width: 500px; margin-left: 20%; margin-top: 2%;">
-            <img src="img/grafica3.jpg" alt="" style="width: 400px; margin-left: 3%; margin-top: 2%; position: absolute;">
+            <img src="img/grafica.jpg" alt="" style="width: 500px; margin-left: 0%; margin-top: 2%;">
+            <img src="img/grafica3.jpg" alt="" style="width: 400px; margin-left: 2%; margin-top: 2%; position: absolute;">
         </div>
     </div>
         <!-- fin parte medio -->
@@ -93,7 +93,7 @@
         <!-- especialistas -->
         <div class="EspecialistasPefil">
             <section>
-                <img class="iconEspecialistas" src="img/Ronaldo profile photo.jpg" alt="">
+                <img class="iconEspecialistas" src="img/ronaldoperfil.jpg" alt="">
                 <p class="nombreEspecialistas">Cristiano Ronaldo</p> <br>
                 <small class="Especialidad">Especialista en redes</small>
             </section>
