--- a/inventario.html
+++ b/inventario.html
@@ -39,7 +39,7 @@
             </section>
 
             <section>
-                <div class="boxGeneral1">
+                <div class="boxGeneral">
                     <img class="IconGeneral" src="img/carro-de-la-carretilla.png" alt="">
                     <p class="TextoGeneral"> Inventario</p>
                 </div>
@@ -64,13 +64,34 @@
     
             <!-- parte medio -->
     <div class="pantallaMedio">
-        
+        <section>
+            <div>
+                <h1 class="tituloPrincipal">Gastos</h1>
+                <div class="card">
+                    <img class="iconEspecialistas" src="img/ronaldoperfil.jpg" alt="">
+                    <p class="TextoGeneral textCompra">Compra de equipos</p>
+                    <p class="TextoGeneral plata">$732.560</p>
+                    <p class="TextoGeneral textogris">Se renovaron el 20% de los equipos</p>
+                </div>
+            </div>
+        </section>
+        <section class="card2">
+            <div>
+                <div class="card">
+                    <img class="iconEspecialistas" src="img/ronaldoperfil.jpg" alt="">
+                    <p class="TextoGeneral textCompra">Reparaciones</p>
+                    <p class="TextoGeneral plata">$410.560</p>
+                    <p class="TextoGeneral textogris">Se cambio el cableado de la oficina de desarrollo</p>
+                </div>
+            </div>
+        </section>
+        <p class="tituloPrincipal">Equipos</p>
+        <img src="img/image2.png" alt="" style="height: 40%; width: 70%;">
     </div>
         <!-- fin parte medio -->
     <div class="pantallaDerecha">
         <div>
-            <p class="tituloDerecha">Compras a <br> realizar</p>
-            <button class="btnAgregarTarea">+</button>
+            <img src="img/image.png" alt="" style="height: 100%; width: 100%;">
         </div>
 
     </div>
