--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         
         <div class="opcionesDerecha">
-            <img src="img/campana.png" alt="Notificaciones" class="iconoNotificaciones">
+            <img src="icons/notifications.png" alt="Notificaciones" class="iconoNotificaciones" style="height: 35px; width: 35px;">
             <div class="perfil">
-                <img src="img/usuario.png" alt="Perfil" class="iconoPerfil">
+                <img src="icons/Avatar_Placeholder.png" alt="Perfil" class="iconoPerfil">
                 <span class="textoPerfil">Mi perfil</span>
             </div>
         </div>
@@ -33,28 +33,28 @@
             
             <section>
                 <div class="Inicio">
-                    <img class="CasaIcon" src="img/casa.png" alt="">
+                    <img class="CasaIcon" src="icons/Home_blanco.png" alt="">
                     <p class="TextoInicio"> Inicio</p>
                 </div>
             </section>
 
             <section>
                 <div class="boxGeneral">
-                    <img class="IconGeneral" src="img/carro-de-la-carretilla.png" alt="">
+                    <img class="IconGeneral" src="icons/inventario_negro.png" alt="">
                     <p class="TextoGeneral"> Inventario</p>
                 </div>
             </section>
 
             <section>
                 <div class="boxGeneral">
-                    <img class="IconGeneral" src="img/base-de-datos.png" alt="">
+                    <img class="IconGeneral" src="icons/Database.png" alt="">
                     <p class="TextoGeneral"> Backups</p>
                 </div>
             </section>
 
             <section>
                 <div class="boxGeneral">
-                    <img class="IconGeneral" src="img/analitica.png" alt="">
+                    <img class="IconGeneral" src="icons/Settings.png" alt="">
                     <p class="TextoGeneral"> Configuracion</p>
                 </div>
             </section>
